# sdl-graphics

./: CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
src/: Buffer.h  CMakeLists.txt  Circle.cpp  Circle.h  Framebuffer.cpp  Framebuffer.h  IShape.h  ITransform.h  Line.cpp  Line.h  Pixel.h  Polygon.cpp  Polygon.h  RawPixel.h  Rotate.cpp  Rotate.h  SDLDisplay.cpp  SDLDisplay.h  Scale.cpp  Scale.h  Translate.cpp  Translate.h  Viewport.cpp  Viewport.h  World.cpp  World.h  main.cpp
